--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -44,6 +44,7 @@ layout: default
           {% if page.news and site.announcements.enabled -%}
             <h2><a href="{{ '/news/' | relative_url }}" style="color: inherit;">News</a></h2>
             {%- include news.html limit=true %}
+          <p><a href="{{ '/news/' | relative_url }}">View all news</a></p>
           {%- endif %}
 
           <!-- Latest posts -->
